--- a/src/pages/[blogid].astro
+++ b/src/pages/[blogid].astro
@@ -18,8 +18,9 @@ const blog = await getBlogDetail(blogId as string);
 ---
 
 <Layout title="Blog Detail">
+
   <a class="backanker" href="/blogpage">←   一覧</a>
-  <img class="topimage" src={blog?.image?.url} alt="" />
+  <img class="topimage" src={blog.image.url} alt="" />
   <main>
 
       <!-- <a class="backanker" href="/blogpage">←</a> -->
