--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import instagram from "./images/instagram.png";
 
 <header class="header">
   <div class="header__logo">
-    <a href="http://localhost:4321/official">
+    <a href="https://rizdor.github.io/official/">
   
       
       <Image src={logo} alt="ロゴ" class="header__logo-image" />
