--- a/src/pages/[blogId].astro
+++ b/src/pages/[blogId].astro
@@ -19,7 +19,7 @@ const blog = await getBlogDetail(blogId as string);
 
 <Layout title="Blog Detail">
 
-  <a class="backanker" href="/blogpage">←   一覧</a>
+  <a class="backanker" href="/official/blogpage">←   一覧</a>
   <img class="topimage" src={blog?.image?.url} alt="" />
   <main>
 
