--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "@/scss/styles.scss";
 import { Image } from "astro:assets";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
+import { GoogleAnalytics } from 'astro-google-analytics';
 // タイトル等をPropsとして受け取る。
 let { title = "", description = "", og_image = "" } = Astro.props;
 ---
@@ -32,6 +33,7 @@ let { title = "", description = "", og_image = "" } = Astro.props;
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="icon" sizes="32x32" type="image/png" href="" />
     <link rel="shortcut icon" href="" />
+    <GoogleAnalytics id="G-STZ429M9E0" />
   </head>
   <body class="kaisei-opti-regular"> <!-- フォントクラスを追加 -->
     <Header />
