ハンバーガー内のパス修正

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2044,6 +2044,7 @@ main {
   .EventData__data {
     max-width: 100%;
     padding: 20px 0 0 0;
+    margin-left: 10%
   }
   .EventData__title {
     display: none;
