--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,7 +61,7 @@ import instagram from "./images/instagram.png";
             <a href="official/" class="header__navigation-link">HOME</a>
           </li>
           <li>
-            <a href=official"/blogpage" class="header__navigation-link">BLOG</a>
+            <a href=official/blogpage" class="header__navigation-link">BLOG</a>
           </li>
           <li>
             <a href="official/winter_concert" class="header__navigation-link">CONCERT</a
