パス通しました

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,10 +61,10 @@ import instagram from "./images/instagram.png";
             <a href="official/" class="header__navigation-link">HOME</a>
           </li>
           <li>
-            <a href=/blogpage" class="header__navigation-link">BLOG</a>
+            <a href="official/blogpage" class="header__navigation-link">BLOG</a>
           </li>
           <li>
-            <a href="/winter_concert" class="header__navigation-link">CONCERT</a
+            <a href="official/winter_concert" class="header__navigation-link">CONCERT</a
             >
           </li>
           <ul style="display: flex; justify-content: space-between;">
