--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -58,13 +58,13 @@ import instagram from "./images/instagram.png";
       <nav id="js-global-navigation" class="header__navigation">
         <ul class="header__navigation-list">
           <li>
-            <a href="official/" class="header__navigation-link">HOME</a>
+            <a href="/official/" class="header__navigation-link">HOME</a>
           </li>
           <li>
-            <a href="official/blogpage" class="header__navigation-link">BLOG</a>
+            <a href="/official/blogpage" class="header__navigation-link">BLOG</a>
           </li>
           <li>
-            <a href="official/winter_concert" class="header__navigation-link">CONCERT</a
+            <a href="/official/winter_concert" class="header__navigation-link">CONCERT</a
             >
           </li>
           <ul style="display: flex; justify-content: space-between;">
