--- a/src/pages/blogpage.astro
+++ b/src/pages/blogpage.astro
@@ -23,11 +23,11 @@ const blog = await getBlogDetail(blogId as string);
             <p>
                 ライブや音楽活動の様子をブログを通じて皆さんに発信しています！コンサートやリサイタルの情報はもちろん、開催までの準備やリハーサルの裏側、どんな思いでステージに臨んでいるのかといった私自身の気持ちまで、日々の活動をできるだけ詳しくお届けしています。
 
-演奏会に関する告知では、会場やプログラムの内容だけでなく、その日に演奏する楽曲に込めた想いやエピソードもご紹介しています。さらに、リハーサルの風景では、どのように曲を仕上げているのか、試行錯誤の過程や共演者とのコミュニケーションの様子をお伝えし、音楽が形になるまでのストーリーを共有しています。
+</p><p>演奏会に関する告知では、会場やプログラムの内容だけでなく、その日に演奏する楽曲に込めた想いやエピソードもご紹介しています。さらに、リハーサルの風景では、どのように曲を仕上げているのか、試行錯誤の過程や共演者とのコミュニケーションの様子をお伝えし、音楽が形になるまでのストーリーを共有しています。
 <br><br>このブログを通じて、音楽活動を身近に感じていただけたら嬉しいです。音楽が好きな方はもちろん、活動を応援してくださる方々と一緒に、音楽の素晴らしさを分かち合いながら新たな発見をしていければと思っています。ぜひ、チェックしてみてくださいね！
             </p>  
             <div class="blogpage__view">
-                    <Blog width = '25vw', height = 'auto', marginbottom="9vw"/>
+                    <Blog class="blog-responsive" width = '25vw', height = 'auto', marginbottom="9vw"/>
             </div>
 
             <!-- <ShowMore /> -->
