--- a/src/components/blog_link.astro
+++ b/src/components/blog_link.astro
@@ -1,3 +1,3 @@
 <div class="Blog_link__lump">
-    <a href="/blogpage" class="Blog__link">Blog Page →</a>
+    <a href="/official/blogpage" class="Blog__link">Blog Page →</a>
 </div>
