concertページの統合

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ import instagram from "./images/instagram.png";
         <a href="/official/blogpage" class="header__navbar-link">Blog</a>
       </li>
       <li class="header__navbar-item">
-        <a href="/official/winter_concert" class="header__navbar-link">Concert</a>
+        <a href="/official/concert" class="header__navbar-link">Concert</a>
       </li>
     </ul>
     <ul class="header__sns">
@@ -64,7 +64,7 @@ import instagram from "./images/instagram.png";
             <a href="/official/blogpage" class="header__navigation-link">BLOG</a>
           </li>
           <li>
-            <a href="/official/winter_concert" class="header__navigation-link">CONCERT</a
+            <a href="/official/concert" class="header__navigation-link">CONCERT</a
             >
           </li>
           <ul style="display: flex; justify-content: space-between;">
