--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1926,7 +1926,7 @@ main {
 }
 .EventData__data {
   max-width: 63%;
-  padding: 20px 0 10px 10%;
+  padding: 20px 0 10px 45px;
 }
 .EventData__date {
   display: flex;
