--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -412,6 +412,7 @@ main {
             width: 90%;
             padding-top: 5vw;
             padding-bottom: 5vw;
+            margin-left: 0px;
           }
         }
 
