BLOG詳細ページのUIを調整

--- a/src/pages/[blogId].astro
+++ b/src/pages/[blogId].astro
@@ -20,7 +20,10 @@ const blog = await getBlogDetail(blogId as string);
 <Layout title="Blog Detail">
 
   <a class="backanker" href="/official/blogpage">←   一覧</a>
-  <img class="topimage" src={blog?.image?.url} alt="" />
+
+  <div class="image-container">
+    <img class="topimage" src={blog?.image?.url} alt="" />
+  </div>
   <main>
 
       <!-- <a class="backanker" href="/blogpage">←</a> -->
@@ -41,14 +44,21 @@ const blog = await getBlogDetail(blogId as string);
       margin-left: 2%;
       position: fixed;
     }
-    .topimage {
-      object-fit: cover;
-      margin-top: 80px;
-      max-width: 90%;
-      margin-left: 5%;
-      border-top-left-radius:1.5%;
-      border-top-right-radius: 1.5%;
-    }
+    .image-container {
+  width: 90%;
+  height: 400px;
+  margin: 80px auto 0; /* 上マージン 80px, 中央配置 */
+  overflow: auto; /* 縦にスクロール可能 */
+  border-top-left-radius: 1.5%;
+  border-top-right-radius: 1.5%;
+}
+
+.topimage {
+  object-fit: cover; /* 縦横比を維持して表示 */
+  width: 100%;
+  height: auto; /* 画像の縦幅は自動 */
+  display: block; /* 不要な余白を防ぐ */
+}
     main {
       /* margin-top: 30px; */
       margin: 0 auto 50px auto;
