--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,7 +95,7 @@ const news = await getNewsDetail(newsId as string);
               <p class="p-middle__About_title_responsive">非レギュラー制</p>
             </div>
             <p class="p-middle__About_explanation">
-              つまりメンバー全員が演奏会に参加するという形をとっています。そのため、楽器を始めたての初心者でも、
+              メンバー全員が演奏会に参加するという形をとっています。そのため、楽器を始めたての初心者でも、
               経験者と同様にコンサートの舞台で演奏することができます。
             </p>
           </div>
