--- a/src/components/SummerGallary.astro
+++ b/src/components/SummerGallary.astro
@@ -1,17 +1,19 @@
 ---
-import { Image } from 'astro:assets';
-import gallary1 from './images/gallary1.jpg';
-import gallary2 from './images/gallary2.jpg';
-import gallary3 from './images/gallary3.jpg';
-import gallary4 from './images/gallary4.jpg';
-import gallary5 from './images/gallary5.png';
+import { getConcert ,getConcertDetail} from "../lib/microcms";
+const response = await getConcert({ fields: ["id","winteryoutube","winterimage1","winterimage2","winterimage3","winterimage4","winterimage5",
+"summeryoutube","summerimage1","summerimage2","summerimage3","summerimage4","summerimage5"] });
+const { concertId } = Astro.params;
+const concert = await getConcertDetail(concertId as string);
+// console.log(concert);
 ---
-
+<ul>
+  {
+    response.contents.slice(0, 1).map((concert: any) => (
 <div class="gallary">
   <h1>gallary</h1>
   <div class="gallary__layer">
     <div class="gallary__image-container big">
-      <iframe src="https://www.youtube-nocookie.com/embed/eX-j--8Mzvg?si=1YQgnWv0xf1qcFuD&amp;controls=0" 
+      <iframe src={concert.summeryoutube} 
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -20,23 +22,23 @@ import gallary5 from './images/gallary5.png';
         class="gallary__content"></iframe>
     </div>
     <div class="gallary__image-container small">
-      <Image src={gallary1} alt="gallaryの一枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage1?.url } alt="gallaryの一枚目の写真" class="gallary__content" />
     </div>
   </div>
   <div class="gallary__layer">
     <div class="gallary__image-container small">
-      <Image src={gallary2} alt="gallaryの二枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage2?.url } alt="gallaryの二枚目の写真" class="gallary__content" />
     </div>
     <div class="gallary__image-container big">
-      <Image src={gallary3} alt="gallaryの三枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage3?.url } alt="gallaryの三枚目の写真" class="gallary__content" />
     </div>
   </div>
   <div class="gallary__layer">
     <div class="gallary__image-container big">
-      <Image src={gallary4} alt="gallaryの四枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage4?.url } alt="gallaryの四枚目の写真" class="gallary__content" />
     </div>
     <div class="gallary__image-container small">
-      <Image src={gallary5} alt="gallaryの五枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage5?.url } alt="gallaryの五枚目の写真" class="gallary__content" />
     </div>
   </div>
 </div>
@@ -54,10 +56,13 @@ import gallary5 from './images/gallary5.png';
         class="gallary__content"></iframe>
       </div>
         <div class="gallary__second_layer">
-      <Image src={gallary1} alt="gallaryの一枚目の写真" class="gallary__content" />
-      <Image src={gallary5} alt="gallaryの五枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage1?.url } alt="gallaryの一枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage5?.url } alt="gallaryの五枚目の写真" class="gallary__content" />
     </div>
       <div class="gallary__third_layer">
-      <Image src={gallary3} alt="gallaryの三枚目の写真" class="gallary__content" />
+      <img src={concert.summerimage3?.url } alt="gallaryの三枚目の写真" class="gallary__content" />
     </div>
   </div>
+          ))
+    }
+</ul>
