CONCERTページトップの画像部分CMS化

--- a/src/pages/concert.astro
+++ b/src/pages/concert.astro
@@ -9,7 +9,7 @@ import SummerGallary from '@/components/SummerGallary.astro'
 import { Image } from "astro:assets";
 
 import { getConcert ,getConcertDetail} from "../lib/microcms";
-const response = await getConcert({ fields: ["id", "year","winterplace","winterdate","summerplace","summerdate"] });
+const response = await getConcert({ fields: ["id", "year","wintertopimage","winterplace","winterdate","summertopimage","summerplace","summerdate"] });
 const { concertId } = Astro.params;
 const concert = await getConcertDetail(concertId as string);
 ---
@@ -30,7 +30,7 @@ const concert = await getConcertDetail(concertId as string);
                 </div>
             </div>
             <div class="winter_concert__header_image">
-            <Image src={ headerimg } alt="concertのheader内の写真" />
+            <img src={concert.wintertopimage?.url} alt="concertのheader内の写真" />
         </div>
         </div>
         <div class="winter_concert__l-container">
@@ -65,7 +65,7 @@ const concert = await getConcertDetail(concertId as string);
                 </div>
             </div>
             <div class="summer_concert__header_image">
-            <Image src={ headerimg } alt="concertのheader内の写真" />
+            <img src={concert.summertopimage?.url} alt="concertのheader内の写真" />
         </div>
         </div>
         <div class="summer_concert__l-container">
