--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -162,7 +162,8 @@ header {
       }
       // ハンバーガー押した後
       .header__nav-area {
-        border-radius: 20px;
+        opacity: 0.9;
+        border-radius: 1px;
         position: fixed;
         top: 10px;
         right: 0;
