--- a/src/pages/[blogId].astro
+++ b/src/pages/[blogId].astro
@@ -29,7 +29,7 @@ const blog = await getBlogDetail(blogId as string);
       <!-- <a class="backanker" href="/blogpage">←</a> -->
       <h1>{blog.title}</h1>
       <p class="blogdate">公開日時:{blog.date}</p>
-      <div style="line-height: 2;"set:html={blog.content} />
+      <div class="content" style="line-height: 2;"set:html={blog.content} />
       <!-- <p>{blog.content}</p> -->
 
   </main>
@@ -46,7 +46,6 @@ const blog = await getBlogDetail(blogId as string);
     }
     .image-container {
   width: 90%;
-  height: 400px;
   margin: 80px auto 0; /* 上マージン 80px, 中央配置 */
   overflow: auto; /* 縦にスクロール可能 */
   border-top-left-radius: 1.5%;
@@ -86,6 +85,14 @@ const blog = await getBlogDetail(blogId as string);
       color: gray;
       text-align: right;
       margin: 20px 0 20px 0;
+    }
+    @media (max-width: 550px) {
+      .content{
+        line-height: 1;
+      }
+      main{
+        padding: 1em 1em 1em 1em;
+      }
     }
   </style>
 </Layout>
