--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ let { title = "", description = "", og_image = "" } = Astro.props;
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="icon" sizes="64x64" type="image/png" href="src/components/images/fav.png" />
+    <link rel="icon" sizes="64x64" type="image/png" href="public/icon.png" />
     <link rel="shortcut icon" href="" />
     <GoogleAnalytics id="G-STZ429M9E0" />
   </head>
