--- a/src/pages/concert.astro
+++ b/src/pages/concert.astro
@@ -9,7 +9,7 @@ import SummerGallary from '@/components/SummerGallary.astro'
 import { Image } from "astro:assets";
 
 import { getConcert ,getConcertDetail} from "../lib/microcms";
-const response = await getConcert({ fields: ["id", "year","wintertopimage","winterplace","winterdate","summertopimage","summerplace","summerdate"] });
+const response = await getConcert({ fields: ["id", "year","wintertopimage","winterplace","winterdate","winterintroduction","summertopimage","summerplace","summerdate","summerintroduction"] });
 const { concertId } = Astro.params;
 const concert = await getConcertDetail(concertId as string);
 ---
@@ -38,14 +38,15 @@ const concert = await getConcertDetail(concertId as string);
             <h1>Introduction</h1>
             <div class="winter_concert__introduction-container">
             <p>
-                アンサンブル・リドールの冬のコンサート、リサイタルが所沢市民文化センターにて行われます！<br/>
+                {/* アンサンブル・リドールの冬のコンサート、リサイタルが所沢市民文化センターにて行われます！<br/>
                 現役メンバーによる演奏をお聞きいただく第1部・第3部と、昨年引退した4年生の卒業公演である第2部の3部構成となっています。<br/>
                 私たちは9月からリサイタルに向けた練習に励んできました。役職の代替わりや引き継ぎなどを経て、6月のサマコンからパワーアップした演奏をぜひ<br/>
                 聴きにいらしてください！そして、今回のリサイタルをもって引退となる3年生の勇姿を見届けに来てくださると嬉しいです。<br/>
                 また、外部の方に4年生の演奏をお聴きいただく機会は今回が最初で最後です。55期の先輩方の素敵な演奏と普段とは違った装いは必聴・必見です！<br/>
                 サマコンから引き続き、今回は冬らしくかわいらしいパートごとの装飾やおそろいのネクタイ、立て看板や譜面台装飾にもぜひ注目してください！<br/>
                 季節に合った冬らしい選曲から、洋楽、ミュージカル音楽、メドレーなど様々な楽曲を演奏いたします。アンサンブル・リドールのリサイタルで、<br/>
-                今年を楽しく締めくくりましょう！サークル員一同、皆様のお越しをお待ちしております♪<br/>
+                今年を楽しく締めくくりましょう！サークル員一同、皆様のお越しをお待ちしております♪<br/> */}
+                {concert.winterintroduction}
             </p>
         </div>
         </div>
@@ -73,12 +74,13 @@ const concert = await getConcertDetail(concertId as string);
             <h1>Introduction</h1>
             <div class="summer_concert__introduction-container">
             <p>
-                リドールの夏の演奏会、サマーコンサート、（通称サマコン）が、今年も光が丘のIMAホールで行われます！
+                {/* リドールの夏の演奏会、サマーコンサート、（通称サマコン）が、今年も光が丘のIMAホールで行われます！
                 4月に新入生44人を迎えて以降、初となる新体制での今回のステージ。
                 フルバン構成の第1部と第3部では、Mrs. GREEN APPLEの軽快な夏ソング｢サママ・フェスティバル｣や、サックスの巨匠ウェイン・ショーターによるジャズナンバー｢Black Nile｣などを含む全10曲を、第2部ではサックス・トランペット・トロンボーンなどが中心のホーンコンボや、バイオリン・フルート・クラリネットなどが中心の弱音コンボなどの少人数編成のバンドで、思わず口ずさみたくなる郷ひろみの名曲、｢２億４千万の瞳－エキゾチック・ジャパン－｣などを含む全5曲を演奏いたします。
                 もちろん15曲全て、当サークル員によるオリジナルのアレンジです！
                 ｢お祭り｣をテーマにしたサークル員おそろいの紺色のTシャツや譜面台装飾、ホール入口に掲示されている立て看板、パートごとの個性溢れる装飾にもご注目ください。
-                リドールのサマコンで、最高の夏のスタートをきりましょう🎵サークル員一堂、皆様にお会いできるのを心待ちにしております。<br/>
+                リドールのサマコンで、最高の夏のスタートをきりましょう🎵サークル員一堂、皆様にお会いできるのを心待ちにしております。<br/> */}
+                {concert.summerintroduction}
             </p>
         </div>
         </div>
