--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,8 @@ import "@/scss/styles.scss";
 
 <footer>
     <div style="display: flex;">
-    <a class="footer__p" href="https://web-team.winc.ne.jp/">© 2024 Copyright  :  </a>
+    <a class="footer__p" href="https://web-team.winc.ne.jp/">Copyright  :  </a>
+    <a class="footer__p" href="https://web-team.winc.ne.jp/">アンサンブル・リドール</a>
     <a class="footer__p" href="https://web-team.winc.ne.jp/" style="text-decoration: underline; margin-left: 10px;">  コンピュータ研究会・WINC</a>
 </div>
 </footer>
