--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,8 +122,7 @@ const news = await getNewsDetail(newsId as string);
               <p class="p-middle__About_title_responsive">インカレ生多数</p>
             </div>
             <p class="p-middle__About_explanation">
-              インカレサークルのため、他大学の学生さんも大歓迎です。現在、日本女子大、立教大、東京女子大、昭和女子大、ICU、上智大、東京女子医大、
-              東京医科歯科大、武蔵野大、津田塾大、清泉女子大の学生さんも参加しています。
+              インカレサークルのため、他大学の学生さんも大歓迎です。現在、慶應義塾大、日本女子大、東京女子大、東京藝大、大妻女子大、立教大、のメンバーが参加しています。
             </p>
           </div>
           <div class="p-middle__About_detail">
