--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@ import "@/scss/styles.scss";
 
 <footer>
     <div style="display: flex;">
-    <p><a class="footer__p" href="https://web-team.winc.ne.jp/">Copyright  :  </a>
-    <a class="footer__p" href="https://web-team.winc.ne.jp/">  2024-2025 アンサンブル・リドール</a></p>
-    <p><a class="footer__p" href="https://web-team.winc.ne.jp/"> Designed by</a>
-    <a class="footer__p" href="https://web-team.winc.ne.jp/" style="text-decoration: underline; margin-left: 10px;">  コンピュータ研究会・WINC</a></p>
+    <a class="footer__p" href="https://web-team.winc.ne.jp/">Copyright  :  </a>
+    <a class="footer__p" href="https://web-team.winc.ne.jp/">  2024-2025 アンサンブル・リドール</a><br>
+    <a class="footer__p" href="https://web-team.winc.ne.jp/"> Designed by</a>
+    <a class="footer__p" href="https://web-team.winc.ne.jp/" style="text-decoration: underline; margin-left: 10px;">  コンピュータ研究会・WINC</a>
 </div>
 </footer>
