--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import "@/scss/styles.scss";
 
 <footer>
     <div style="display: flex;">
-    Copyright  :  2024-2025 アンサンブル・リドール</a><br>   Designed by
+    Copyright  :  2024-2025 アンサンブル・リドール<br>   Designed by
     <a class="footer__p" href="https://web-team.winc.ne.jp/" style="text-decoration: underline; margin-left: 10px;">  コンピュータ研究会・WINC</a>
 </div>
 </footer>
