--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@ import "@/scss/styles.scss";
 ---
 
 <footer>
-    <div style="display: flex;">
-    Copyright  :  2024-2025 アンサンブル・リドール<br>   Designed by
+    <div style="display: flex;">Designed by
     <a class="footer__p" href="https://web-team.winc.ne.jp/" style="text-decoration: underline; margin-left: 10px;">  コンピュータ研究会・WINC</a>
+    <br><p>Copyright  :  2024-2025 アンサンブル・リドール</p>  
 </div>
 </footer>
