--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import "@/scss/styles.scss";
 
 <footer>
     <div style="display: flex;">
-    <p>Designed by  コンピュータ研究会・WINC</p><br>
+    <p>Designed by  コンピュータ研究会・WINC</p><br><br>
     <p>Copyright  :  2024-2025 アンサンブル・リドール  All rights reserved.</p>  
 </div>
 </footer>
