--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import "@/scss/styles.scss";
 
 <footer>
     <div style="display: flex;">
-    Designed by  コンピュータ研究会・WINC　\n
+    Designed by  コンピュータ研究会・WINC  <br>
     Copyright  :  2024-2025 アンサンブル・リドール  All rights reserved.  
 </div>
 </footer>
