--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,6 +42,11 @@ import Form from "@/components/Form.astro";
           />
         </a>
       </li>
+      <li class="header__sns-item">
+        <a href="https://www.youtube.com/@rizdor">
+          <Image src={youtube} alt="Youtube.comのアイコン" class="header__youtube" />
+        </a>
+      </li>
     </ul>
   </div>
 
