--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -91,6 +91,13 @@ import Form from "@/components/Form.astro";
                 class="header__navigation-link" style="font-size: 5vw;text-decoration: underline;">Instagram</a
               >
             </li>
+            <li>
+              <a
+                href="https://www.youtube.com/@rizdor"
+                class="header__navigation-link"
+                style="font-size: 5vw;text-decoration: underline;">YouTube</a
+              >
+            </li>
           </ul>
         </ul>
         <div id="js-focus-trap" tabindex="0"></div>
