--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const news = await getNewsDetail(newsId as string);
     <section id="top" class="p-top">
       <div class="p-top__logos">
         <div class="p-top__logos_line">
-          <h1>早稲田公認音楽サークル</h1>
+          <h1>早稲田大学公認音楽サークル</h1>
         </div>
         <span class="p-top__logos_overline1"></span>
         <span class="p-top__logos_overline2"></span>
